--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -44,10 +44,9 @@ header {
     }
 }
 
-/* Title styling */
 h1 {
     margin: 30px 0;
-    font-size: 2.2em;
+    font-size: 2.1em;
     color: #ffffff;
 }
 
@@ -154,13 +153,21 @@ a {
     margin-top: 20px;
 }
 
+.dataset-image {
+    height: 70px;
+    margin-right: 10px;
+}
+
 .dataset-info {
+    display: flex;
+    align-items: center;
     background-color: #1e1e1e;
     color: #cccccc;
-    padding: 31px;
+    padding: 19px;
     border-radius: 5px;
     max-width: 400px;
     border: 1px solid #444444;
+    margin-top: 1px;
 }
 
 .team-container {
