--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #121212;
@@ -27,7 +27,7 @@ header {
 }
 
 .logo-container img {
-    height: 70px; 
+    height: 70px;
     max-width: 100%;
     object-fit: contain;
 }
@@ -57,12 +57,23 @@ h2 {
     color: #ffffff;
 }
 
-video {
-    width: 100%;
-    height: auto;
-    max-width: 1000px;
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 aspect ratio */
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+    background: #000;
     margin-top: 20px;
-    border: 1px solid #444444;
+}
+
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
 }
 
 .abstract {
@@ -120,7 +131,7 @@ a {
 
 .terminal pre {
     margin: 0;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: "Courier New", Courier, monospace;
     overflow-x: auto;
 }
 
@@ -143,7 +154,7 @@ a {
 }
 
 .repo-card {
-    max-width:400px;
+    max-width: 400px;
 }
 
 .repo-dataset-container {
